# Sortierverfahren

./: .clang-format  .gitignore  CMakeLists.txt  Laufzeit_Notify_Vergleich.txt  Laufzeiten.txt  Readme.txt  initZeiten  initZeiten.txt
Bachelorarbeit/: literatur.bib  main.tex
Messdaten/: Mergesort int Dupliziert 10 1.txt  Mergesort int Dupliziert 10 nTbE1.txt  Mergesort int Dupliziert 10 nTbE2.txt  Mergesort int Dupliziert 10 nTbE3.txt  Mergesort int Dupliziert 10 nTbE4.txt  Mergesort int Dupliziert 10 nTbE5.txt  Mergesort int Dupliziert 10 nTbE6.txt  Mergesort int Dupliziert 10 nTbE7.txt  Mergesort int Dupliziert 100 1.txt  Mergesort int Dupliziert 100 nTbE1.txt  Mergesort int Dupliziert 100 nTbE2.txt  Mergesort int Dupliziert 100 nTbE3.txt  Mergesort int Dupliziert 100 nTbE4.txt  Mergesort int Dupliziert 100 nTbE5.txt  Mergesort int Dupliziert 100 nTbE6.txt  Mergesort int Dupliziert 100 nTbE7.txt  Mergesort int Dupliziert 1000 1.txt  Mergesort int Dupliziert 1000 nTbE1.txt  Mergesort int Dupliziert 1000 nTbE2.txt  Mergesort int Dupliziert 1000 nTbE3.txt  Mergesort int Dupliziert 1000 nTbE4.txt  Mergesort int Dupliziert 1000 nTbE5.txt  Mergesort int Dupliziert 1000 nTbE6.txt  Mergesort int Dupliziert 1000 nTbE7.txt  Mergesort int Dupliziert 1200 1.txt  Mergesort int Dupliziert 1200 nTbE1.txt  Mergesort int Dupliziert 1200 nTbE2.txt  Mergesort int Dupliziert 1200 nTbE3.txt  Mergesort int Dupliziert 1200 nTbE4.txt  Mergesort int Dupliziert 1200 nTbE5.txt  Mergesort int Dupliziert 1200 nTbE6.txt  Mergesort int Dupliziert 1200 nTbE7.txt  Mergesort int Dupliziert 4000 1.txt  (+401 more)
(+55 files in other folders)
